# locd-test-toolkit

./: Locd_Concept_20260215.odt  SPEC.md  locd.arch.json
locd-test-toolkit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOVER-2025-02-23.md  HANDOVER-2026-02-23.md  HANDOVER-PHASE-4-5-6.md  HANDOVER.md  LICENSE-APACHE  LICENSE-MIT  README.md
locd-test-toolkit/.github/workflows/: bench.yml  release.yml  security.yml  test.yml
locd-test-toolkit/crates/locd-core/: Cargo.toml
locd-test-toolkit/crates/locd-core/src/: constants.rs  error.rs  keys.rs  lib.rs  types.rs
locd-test-toolkit/crates/locd-crypto/: Cargo.toml
locd-test-toolkit/crates/locd-crypto/src/: aead.rs  ed25519.rs  encoding.rs  kdf.rs  lib.rs  password.rs  x25519.rs
locd-test-toolkit/crates/locd-delegation/: Cargo.toml
locd-test-toolkit/crates/locd-delegation/src/: lib.rs  token.rs  validator.rs
locd-test-toolkit/crates/locd-dns/: Cargo.toml
locd-test-toolkit/crates/locd-dns/src/: lib.rs  records.rs  resolver.rs
locd-test-toolkit/crates/locd-revocation/: Cargo.toml
locd-test-toolkit/crates/locd-revocation/src/: cache.rs  checker.rs  lib.rs  sources.rs  types.rs
locd-test-toolkit/crates/locd-test-vectors/: Cargo.toml
locd-test-toolkit/crates/locd-test-vectors/src/: generator.rs  lib.rs  types.rs
locd-test-toolkit/crates/locd-verification/: Cargo.toml
locd-test-toolkit/crates/locd-verification/src/: claimant.rs  lib.rs  messages.rs  verifier.rs
locd-test-toolkit/docs/: ARCHITECTURE.md
locd-test-toolkit/examples/: 01_key_generation.rs  02_delegation_token.rs  03_verification_flow.rs  04_dns_records.rs  05_revocation.rs  06_complete_workflow.rs  generate_vectors.rs
locd-test-toolkit/locd-audit/: .gitignore  Cargo.toml  README.md
locd-test-toolkit/locd-audit/fuzz/: Cargo.toml
locd-test-toolkit/locd-audit/fuzz/fuzz_targets/: fuzz_delegation_token.rs  fuzz_dns_record.rs  fuzz_verification_messages.rs
locd-test-toolkit/locd-audit/src/: lib.rs  main.rs  timing.rs  vulns.rs
locd-test-toolkit/locd-bench/: Cargo.toml  QUICKSTART.md  README.md
locd-test-toolkit/locd-bench/benches/: crypto.rs  delegation.rs  dns.rs  verification.rs
locd-test-toolkit/locd-mock-dns/: Cargo.toml  README.md
locd-test-toolkit/locd-mock-dns/src/: lib.rs  main.rs
locd-test-toolkit/locd-mock-dns/tests/: integration_test.rs
locd-test-toolkit/tools/: README.md
locd-test-toolkit/tools/locd-compliance/: Cargo.toml
locd-test-toolkit/tools/locd-compliance/src/: compat.rs  edge_cases.rs  main.rs  negative.rs  report.rs
locd-test-toolkit/tools/locd-delegate/: Cargo.toml
locd-test-toolkit/tools/locd-delegate/src/: main.rs
locd-test-toolkit/tools/locd-dns-tools/: Cargo.toml
locd-test-toolkit/tools/locd-dns-tools/src/: main.rs
locd-test-toolkit/tools/locd-keygen/: Cargo.toml
locd-test-toolkit/tools/locd-keygen/src/: main.rs
locd-test-toolkit/tools/locd-verify/: Cargo.toml
locd-test-toolkit/tools/locd-verify/src/: main.rs
