[package]
name = "locd-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
locd-core = { workspace = true }
locd-crypto = { workspace = true }
locd-delegation = { workspace = true }
locd-dns = { workspace = true }
locd-verification = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

# Timing analysis
statistical = "1.0"

# Fuzzing
arbitrary = { version = "1.3", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
rand = { workspace = true }

[[bin]]
name = "locd-audit"
path = "src/main.rs"
