[package]
name = "locd-mock-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
locd-core = { workspace = true }
locd-dns = { workspace = true }
locd-crypto = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
trust-dns-server = "0.23"
trust-dns-client = "0.23"

[dev-dependencies]
locd-verification = { workspace = true }

[[bin]]
name = "locd-mock-dns"
path = "src/main.rs"
