[package]
name = "locd-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
locd-core = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64ct = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
