[package]
name = "locd-delegation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
locd-core = { workspace = true }
locd-crypto = { workspace = true }
ciborium = { workspace = true }
coset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
