[package]
name = "locd-revocation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
locd-core = { path = "../locd-core" }
locd-crypto = { path = "../locd-crypto" }
locd-dns = { path = "../locd-dns" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
