[package]
name = "locd-compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "locd-compliance"
path = "src/main.rs"

[dependencies]
locd-core = { workspace = true }
locd-crypto = { workspace = true }
locd-delegation = { workspace = true }
locd-dns = { workspace = true }
locd-verification = { workspace = true }
locd-revocation = { workspace = true }
locd-test-vectors = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tera = "1.19"       # Template engine for HTML reports
serde = { workspace = true, features = ["derive"] }  # Enable derive feature
