[package]
name = "locd-keygen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "locd-keygen"
path = "src/main.rs"

[dependencies]
locd-core = { workspace = true }
locd-crypto = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
